--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+  <style type="text/css">
+    @font-face {
+      font-family: Xuenjaqen;
+      src: url("Xuyenjaqen-QKHY-Regular.ttf");
+    }
+    
+    p {
+      font-family: Xuenjaqen
+    }
+  </style>
+  </head>
   <body>
     <p>Bruh</p>
   </body>
